//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  email String [unique, not null]
  password String [not null]
  salt String [not null]
  tour users_on_tours [not null]
  username String [unique]
  fullName String
  location users_on_locations [not null]
  role Role [default: 'USER']
}

Table tour {
  id String [pk]
  name String [not null]
  description String [not null]
  usersID String [not null]
  image String [not null]
  location String [not null]
  price Float
  remainingCount Int
  users users_on_tours [not null]
  ordersPay oders_pay [not null]
  count String
  cuisine String
  suitable_subject String
  vchouer String
  time_out String
  ideal_time String
  image2 String
  image3 String
  image4 String
  transport String
  hotel String
  starting_gate String
  sight_seeing String
  message message [not null]
}

Table location {
  id String [pk]
  image String [not null]
  country String [not null]
  usersID String [not null]
  description String
  location String [not null]
  users users_on_locations [not null]
  price Float
  remainingCount Int
  count String
  cuisine String
  suitable_subject String
  vchouer String
  time_out String
  ideal_time String
  image2 String
  image3 String
  image4 String
  transport String
  hotel String
  starting_gate String
  sight_seeing String
  messageLocation message_location [not null]
}

Table oders_pay {
  id String [pk]
  usersID String [not null]
  tourID String [not null]
  tour tour [not null]
}

Table message {
  id String [pk]
  message String [not null]
  userID String
  tourID String
  tour tour
}

Table message_location {
  id String [pk]
  message String [not null]
  userID String
  locationID String
  Location location
}

Table users_on_tours {
  user users [not null]
  userID String [not null]
  tour tour [not null]
  tourID String [not null]

  indexes {
    (tourID, userID) [pk]
  }
}

Table users_on_locations {
  user users [not null]
  userID String [not null]
  location location [not null]
  locationID String [not null]

  indexes {
    (locationID, userID) [pk]
  }
}

Enum Role {
  USER
  ADMIN
}

Ref: oders_pay.tourID > tour.id

Ref: message.tourID > tour.id

Ref: message_location.locationID > location.id

Ref: users_on_tours.userID > users.id

Ref: users_on_tours.tourID > tour.id

Ref: users_on_locations.userID > users.id

Ref: users_on_locations.locationID > location.id